Update landing page with some config settings

--- a/myApp/myApp.csproj
+++ b/myApp/myApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>293868d4-459c-4231-bf51-ea4695de4c98</UserSecretsId>
   </PropertyGroup>
 
 </Project>
