--- a/myApp/appsettings.json
+++ b/myApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EnvName": "Local",
+  "FavoriteColor": "lightblue",
+  "MySecret": "NOT SECURE!! Do Something!"
 }
