--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - 1.0-VSArm
 env:
+  AZURE_RG: bnk-myIaC-vsarm-rg
   AZURE_WEBAPP_NAME: bnk-myApp-vsarm-site
   AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
   AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.bnk_myApp_vsarm_site_47a1 }}
