--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -55,7 +55,7 @@ jobs:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ env.AZURE_RG }}
         template: ./deploy/arm/WebSite.json
-        parameters: ./deploy/arm/WebSite.parameters.json
+        parameters: deploy/arm/WebSite.parameters.json
 
     # Deploy Code to Azure
     - name: Deploy to Azure WebApp
