--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -8,7 +8,7 @@ env:
   APP_NAME: myIaC-arm-gha
   AZURE_RG: bnk-$APP_NAME-rg
   AZURE_RG_LOCATION: centralus
-  AZURE_WEBAPP_NAME: bnk-${{env.APP_NAME}}-site
+  AZURE_WEBAPP_NAME: bnk-$APP_NAME-site
   AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
   #AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.bnk_myApp_vsarm_site_47a1 }}
   CONFIGURATION: Release
