--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -6,9 +6,9 @@ on:
     - 1.0-VSArm
 env:
   APP_NAME: myIaC-arm-gha
-  AZURE_RG: bnk-$APP_NAME-rg
   AZURE_RG_LOCATION: centralus
-  AZURE_WEBAPP_NAME: bnk-$APP_NAME-site
+  AZURE_RG: bnk-${{APP_NAME}}-rg
+  AZURE_WEBAPP_NAME: bnk-${{APP_NAME}}-site
   AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
   #AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.bnk_myApp_vsarm_site_47a1 }}
   CONFIGURATION: Release
@@ -47,6 +47,10 @@ jobs:
       run: |
         echo "ARM_SUBSCRIPTION_ID=$(az account show --query="id" -o tsv)" >> $GITHUB_ENV
         echo "ARM_TENANT_ID=$(az account show --query="tenantId" -o tsv)" >> $GITHUB_ENV
+        echo "AZURE_RG=$(echo bnk-${env.APP_NAME}-rg)" >> $GITHUB_ENV
+        echo "AZURE_APP=$(echo bnk-${env.APP_NAME}-site)" >> $GITHUB_ENV
+        echo 'AZURE_RG: ' ${{env.AZURE_RG}}
+        echo 'AZURE_APP: ' ${{env.AZURE_APP}}
         pwd
         ls -la deploy/arm
         az group create --name ${{ env.AZURE_RG }} --location ${{ env.AZURE_RG_LOCATION }}
