--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -45,10 +45,11 @@ jobs:
       run: |
         echo "ARM_SUBSCRIPTION_ID=$(az account show --query="id" -o tsv)" >> $GITHUB_ENV
         echo "ARM_TENANT_ID=$(az account show --query="tenantId" -o tsv)" >> $GITHUB_ENV
+        echo bnk-${{env.APP_NAME}}-rg
         echo "AZURE_RG=$(echo bnk-${{env.APP_NAME}}-rg)" >> $GITHUB_ENV
         echo "AZURE_APP=$(echo bnk-${{env.APP_NAME}}-site)" >> $GITHUB_ENV
-        echo "AZURE_RG" ${{env.AZURE_RG}}
-        echo "AZURE_APP" ${{env.AZURE_APP}}
+        echo "AZURE_RG  ${{env.AZURE_RG}}"
+        echo "AZURE_APP ${{env.AZURE_APP}}"
         pwd
         ls -la deploy/arm
         az group create --name ${{ env.AZURE_RG }} --location ${{ env.AZURE_RG_LOCATION }}
