--- a/.github/workflows/bnk-myApp-vsarm-site.yml
+++ b/.github/workflows/bnk-myApp-vsarm-site.yml
@@ -44,11 +44,9 @@ jobs:
       run: |
         echo "ARM_SUBSCRIPTION_ID=$(az account show --query="id" -o tsv)" >> $GITHUB_ENV
         echo "ARM_TENANT_ID=$(az account show --query="tenantId" -o tsv)" >> $GITHUB_ENV
-        echo "AZURE_RG=$(bnk-${APP_NAME}-rg)" >> $GITHUB_ENV
-        echo "AZURE_APP=$(bnk-${APP_NAME}-site)" >> $GITHUB_ENV
         pwd
         ls -la deploy/arm
-        az group create --name ${AZURE_RG} --location ${AZURE_RG_LOCATION}
+        az group create --name bnk-${{env.APP_NAME}}-rg --location ${{env.AZURE_RG_LOCATION}}
         echo "Azure resource group created"
 
       # Deploy ARM template
@@ -56,7 +54,7 @@ jobs:
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION }}
-        resourceGroupName: ${{ env.AZURE_RG }}
+        resourceGroupName: bnk-${{ env.APP_NAME }}-rg
         template: ./deploy/arm/WebSite.json
         parameters: deploy/arm/WebSite.parameters.json appName=${{ env.APP_NAME }}
 
@@ -64,7 +62,7 @@ jobs:
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_APP }}
+        app-name: bnk-${{ env.APP_NAME }}-site
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         # publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
