tweak names and parameters

--- a/.github/workflows/deploy-IaC-ARM.yml
+++ b/.github/workflows/deploy-IaC-ARM.yml
@@ -15,7 +15,7 @@ env:
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: myApp
 jobs:
-  build-and-deploy:
+  build-and-deploy-ARM:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
