--- a/.github/workflows/deploy-Code-ARM.yml
+++ b/.github/workflows/deploy-Code-ARM.yml
@@ -1,15 +1,60 @@
 name: Deploy Code ARM
 on:
+  workflow_dispatch:
+    branches:
+    - 1.2-Code-ARM
+    - complete
   workflow_run:
     workflows:
       - "deploy-IaC-ARM"
     type:
       - complete
     branches:
-    - 1.2-Code-Bicep
+    - 1.2-Code-ARM
+    - complete
+
+env:
+  APP_NAME: IaC-arm
+  AZURE_RG_LOCATION: centralus
+  AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
+  #AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.bnk_myApp_vsarm_site_47a1 }}
+  CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 6.0.x
+  WORKING_DIRECTORY: myApp
+
 jobs:
-  say_hi:
+  deploy-Code:
     runs-on: ubuntu-latest
     steps:
-      - name: Hi
-        run: echo "Hi"
+    - uses: actions/checkout@v2
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+
+    - name: Test
+      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+
+    # Deploy Code to Azure
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: bnk-${{ env.APP_NAME }}-site
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
