--- a/.github/workflows/deploy-Code-ARM.yml
+++ b/.github/workflows/deploy-Code-ARM.yml
@@ -48,6 +48,7 @@ jobs:
 
   Deploy-Code:
     runs-on: ubuntu-latest
+    needs: [Build-Code]
     steps:
     # Deploy Code to Azure
     - uses: azure/login@v1
