--- a/.github/workflows/deploy-Code-ARM.yml
+++ b/.github/workflows/deploy-Code-ARM.yml
@@ -46,10 +46,23 @@ jobs:
     - name: Publish
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
 
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: site
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
   Deploy-Code:
     runs-on: ubuntu-latest
     needs: [Build-Code]
     steps:
+    - name: Download site package
+      uses: actions/download-artifact@v2
+      with:
+        name: site
+        path: ${{ github.workspace }}/site
+
+
     # Deploy Code to Azure
     - uses: azure/login@v1
       with:
@@ -59,11 +72,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: bnk-${{ env.APP_NAME }}-site
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        package: ${{ github.workspace }}/site
 
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
