--- a/.github/workflows/deploy-Code-Bicep.yml
+++ b/.github/workflows/deploy-Code-Bicep.yml
@@ -15,7 +15,7 @@ on:
     - master
 
 env:
-  APP_NAME: IaC-bicep
+  APP_NAME: IaC-Bicep
   AZURE_RG_LOCATION: centralus
   AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
   #AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.bnk_myApp_vsarm_site_47a1 }}
