--- a/.github/workflows/deploy-IaC-TF.yml
+++ b/.github/workflows/deploy-IaC-TF.yml
@@ -12,8 +12,6 @@ on:
     - master
     - release/*
     
-  
-
 env:
   APP_NAME: IaC-TF
   ENV_NAME: "poc"
@@ -36,19 +34,9 @@ jobs:
       if: github.event_name == 'pull_request'
       shell: bash
       run: |
-        pr=${{ github.event.number }}
-        printf -v j "%-3d" $pr
-        echo "ENV_NAME=$(echo pr${{github.event.number }})" >> $GITHUB_ENV
-        echo "ENV_NAME=$(echo pr$(pr))" >> $GITHUB_ENV
+        printf -v pr_number "%-3d" ${{ github.event.number }}
+        echo "ENV_NAME=$(echo pr$(pr_number))" >> $GITHUB_ENV
 
-    - name: Setup Authentication for TF
-      uses: Azure/cli@v1
-      with:
-        inlineScript: | 
-          echo "ARM_SUBSCRIPTION_ID=$(az account show --query="id" -o tsv)" >> $GITHUB_ENV
-          echo "ARM_CLIENT_ID=$(az account show --query="user.name" -o tsv)" >> $GITHUB_ENV
-          echo "ARM_CLIENT_SECRET=$(jq '.clientSecret' -r <<< '${{ secrets.AZURE_CREDENTIALS }}')" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=$(az account show --query="tenantId" -o tsv)" >> $GITHUB_ENV
 
     # Replace Tokens #{ENV_NAME}#: Set TF State Key = Branch name, #{SHORT_SHA}# for tags
     - name: Replace tokens
@@ -68,6 +56,15 @@ jobs:
         cat vars.tf
         cat actions.backend.tfvars
         cat ./params.bnk.tfvars
+
+    - name: Setup Authentication for TF
+      uses: Azure/cli@v1
+      with:
+        inlineScript: | 
+          echo "ARM_SUBSCRIPTION_ID=$(az account show --query="id" -o tsv)" >> $GITHUB_ENV
+          echo "ARM_CLIENT_ID=$(az account show --query="user.name" -o tsv)" >> $GITHUB_ENV
+          echo "ARM_CLIENT_SECRET=$(jq '.clientSecret' -r <<< '${{ secrets.AZURE_CREDENTIALS }}')" >> $GITHUB_ENV
+          echo "ARM_TENANT_ID=$(az account show --query="tenantId" -o tsv)" >> $GITHUB_ENV
 
       # Deploy Infrastructure
     - uses: azure/login@v1
