adjust print-env

--- a/.github/workflows/deploy-IaC-TF.yml
+++ b/.github/workflows/deploy-IaC-TF.yml
@@ -53,9 +53,8 @@ jobs:
         echo 'APP_NAME:' $APP_NAME
         echo 'ENV_NAME:' $ENV_NAME
         cat backend.tf
-        cat vars.tf
         cat actions.backend.tfvars
-        cat ./params.bnk.tfvars
+        cat params.bnk.tfvars
 
     - name: Setup Authentication for TF
       uses: Azure/cli@v1
