--- a/.github/workflows/pr-deploy-IaC.yml
+++ b/.github/workflows/pr-deploy-IaC.yml
@@ -2,9 +2,7 @@ name: PR-Deploy-IaC
 on:
   workflow_dispatch: # Run manually 
   pull_request:
-    branches:
-      - main
-      - release/*
+    types: [ opened, closed, reopened]
 
 env:
   APP_NAME: POC-IaC-TF
@@ -15,6 +13,21 @@ env:
   ENV_NAME: pr${{ github.event.number }}
     
 jobs:
+  Hello-World:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Print Environment
+      run: |
+        pwd
+        ls -la
+        echo '*** Workflow ENV ***'
+        echo 'APP_NAME:' $APP_NAME
+        echo 'ENV_NAME:' $ENV_NAME
+        echo 'PR_NUMBER:' $PR_NUMBER
+        cat backend.tf
+        cat backend.actions.tfvars
+        cat params.actions.tfvars
+
   PR-Opened:
     if: contains(github.event.pull_reqest.action, 'opened')
     runs-on: ubuntu-latest
