--- a/.github/workflows/pr-deploy-IaC.yml
+++ b/.github/workflows/pr-deploy-IaC.yml
@@ -15,6 +15,9 @@ env:
 jobs:
   Hello-World:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./deploy/terraform
     steps:
     - name: Print Environment
       run: |
