--- a/.github/workflows/pr-deploy-IaC.yml
+++ b/.github/workflows/pr-deploy-IaC.yml
@@ -15,21 +15,13 @@ env:
 jobs:
   Hello-World:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./deploy/terraform
     steps:
     - name: Print Environment
       run: |
-        pwd
-        ls -la
-        echo '*** Workflow ENV ***'
+        echo '*** Print ENV ***'
         echo 'APP_NAME:' $APP_NAME
         echo 'ENV_NAME:' $ENV_NAME
         echo 'PR_NUMBER:' $PR_NUMBER
-        cat backend.tf
-        cat backend.actions.tfvars
-        cat params.actions.tfvars
 
   PR-Opened:
     if: contains(github.event.pull_request.action, 'opened')
