--- a/.github/workflows/pr-deploy-IaC.yml
+++ b/.github/workflows/pr-deploy-IaC.yml
@@ -9,12 +9,12 @@ on:
 
 env:
   APP_NAME: POC-IaC-TF
+  ENV_NAME: pr${{ github.event.number }}
+  ACTION: ${{ github.event.action}}
   AZURE_RG_LOCATION: centralus
   TF_STORAGE_RG: "poc-shared-tfstate"
   TF_STORAGE_ACCT: "poceusastfstate"
   PR_NUMBER: ${{ github.event.number }}
-  ENV_NAME: pr${{ github.event.number }}
-  ACTION: ${{ github.event.action}}
     
 jobs:
   Hello-World:
@@ -79,6 +79,63 @@ jobs:
 
     - name: TF Apply
       run: terraform apply -auto-approve -var-file ./params.actions.tfvars
+
+  Deploy-Code:
+    needs: 
+    - PR-Opened
+    runs-on: ubuntu-latest
+    env:
+      ENV_NAME: pr${{ github.event.number }}
+      APP_NAME: act-pr${{github.event.number}}-IaC-TF
+      AZURE_RG_LOCATION: centralus
+      AZURE_WEBAPP_PACKAGE_PATH: myApp/publish
+      CONFIGURATION: Release
+      DOTNET_CORE_VERSION: 6.0.x
+      WORKING_DIRECTORY: myApp
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+
+    - name: Test
+      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: site
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+    - name: Download site package
+      uses: actions/download-artifact@v2
+      with:
+        name: site
+        path: ${{ github.workspace }}/site
+
+
+    # Deploy Code to Azure
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: act-${{env.ENV_NAME}}-${{ env.APP_NAME }}-site
+        package: ${{ github.workspace }}/site
 
   PR-Closed:
     if: ${{ contains(github.event.action, 'closed') }}
